--- a/packages/spacing/package.json
+++ b/packages/spacing/package.json
@@ -1,7 +1,7 @@
 {
   "name": "@bricks/spacing",
   "version": "0.0.0",
-  "description": "A component for applying spacing between components.",
+  "description": "A component for applying vertical spacing between components.",
   "main": "lib/index.cjs.js",
   "module": "lib/index.es.js",
   "umd": "lib/bricks-spacing.min.js",
@@ -9,6 +9,9 @@
   "repository": "git@github.com:chris-pearce/bricks.git",
   "author": "Chris Pearce <hello@cjpearce.com>",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/chris-pearce/bricks/issues"
+  },
   "keywords": [
     "components",
     "design-systems",
