--- a/package.json
+++ b/package.json
@@ -2,7 +2,12 @@
   "name": "bricks",
   "description": "A bunch of accessible (#a11y) React presentational components to help build your UI (brick by brick)",
   "private": true,
+  "repository": "git@github.com:chris-pearce/bricks.git",
+  "author": "Chris Pearce <hello@cjpearce.com>",
   "license": "MIT",
+  "bugs": {
+    "url": "https://github.com/chris-pearce/bricks/issues"
+  },
   "keywords": [
     "components",
     "design-systems",
@@ -13,10 +18,6 @@
     "accessible-ui",
     "accessibility"
   ],
-  "bugs": {
-    "url": "https://github.com/chris-pearce/bricks/issues"
-  },
-  "author": "Chris Pearce <hello@cjpearce.com>",
   "workspaces": [
     "packages/*"
   ],
@@ -24,9 +25,11 @@
     "dev": "start-storybook -p 9001 -c sandbox",
     "deploy:sandbox": "storybook-to-ghpages -s public",
     "bootstrap": "lerna bootstrap",
-    "build": "lerna exec --scope '@bricks/*' --concurrency 1 -- yarn build",
+    "postbootstrap": "yarn build",
+    "build": "lerna exec --scope '@bricks/*' --ignore '@bricks/consumer' --concurrency 1 -- yarn build",
     "precommit": "lint-staged",
-    "lint": "eslint ."
+    "lint": "eslint .",
+    "clean:lib": "rimraf packages/*/lib/**"
   },
   "husky": {
     "hooks": {
@@ -61,7 +64,7 @@
     "backpack.css": "^2.0.0",
     "chalk": "^2.4.2",
     "copyfiles": "^2.1.0",
-    "eslint": "^5.15.1",
+    "eslint": "^5.15.2",
     "eslint-config-airbnb": "^17.1.0",
     "eslint-config-prettier": "^4.1.0",
     "eslint-plugin-babel": "^5.3.0",
@@ -78,6 +81,7 @@
     "prop-types": "^15.7.2",
     "react": "^16.8.4",
     "react-dom": "^16.8.4",
+    "rimraf": "^2.6.3",
     "rollup": "^1.6.0",
     "rollup-plugin-babel": "^4.3.2",
     "rollup-plugin-commonjs": "^9.2.1",
