--- a/packages/tokens-provider/package.json
+++ b/packages/tokens-provider/package.json
@@ -4,7 +4,7 @@
   "description": "A provider component for accessing a consumers tokens.",
   "main": "lib/index.cjs.js",
   "module": "lib/index.es.js",
-  "umd": "lib/tokens-provider.min.js",
+  "umd": "lib/bricks-tokens-provider.min.js",
   "types": "lib/index.d.ts",
   "repository": "git@github.com:chris-pearce/bricks.git",
   "author": "Chris Pearce <hello@cjpearce.com>",
